--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <header class="max-w-screen-xl h-16 bg-navbar mx-auto lg:max-w-full lg:bg-black lg:h-20">
         <div class="max-w-screen-xl flex justify-between items-center h-full lg:mx-auto">
             <div class="w-40 flex items-center justify-evenly ml-4">
-                <img src="https://kampusmerdeka.kemdikbud.go.id/static/media/logo-pendidikan@2x.0ce0acdc.webp" alt="" class="w-10 leading-4">
-                <img src="https://kampusmerdeka.kemdikbud.go.id/static/media/logo-white.mobile@2x.2ef70552.webp" alt="Logo" class="w-20 leading-4 ml-3">
+                <img src="https://kampusmerdeka.kemdikbud.go.id/static/media/logo-pendidikan@2x.0ce0acdc.webp" alt="" class="w-10 leading-4 cursor-pointer">
+                <img src="https://kampusmerdeka.kemdikbud.go.id/static/media/logo-white.mobile@2x.2ef70552.webp" alt="Logo" class="w-20 leading-4 ml-3 cursor-pointer">
             </div>
             <div class="nav text-3xl cursor-pointer lg:hidden absolute right-0 z-40 text-white mr-4">
                 <ion-icon name="menu-outline" onclick="Menu(this)"></ion-icon>
